# SIT-223-7.3HD

./: .bandit  .gitignore  .ruff.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.staging.yml  docker-diagnostic.sh  jenkins-docker-test-stage.groovy  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
app/: __init__.py  main.py  monitoring.py
config/: nginx.conf  security.md
data/clean/: .gitkeep  validation_results.json
data/raw/: .gitkeep
etl/: __init__.py  clean.py
expectations/: schema.py
reports/: .gitkeep
setup/: jenkins-docker-setup.ps1  jenkins-setup.ps1
tests/: conftest.py  test_api.py  test_etl.py  test_integration.py
